fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -16,4 +16,8 @@ img{
     font-family: RobotoThin;
     margin:auto;
     font-size:10px;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+    margin-top: 300px;
 }
